# openms-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: integration-tests.yml
openms_python/: __init__.py  _io_utils.py  _meta_mapping.py  io.py  py_consensusmap.py  py_fasta.py  py_feature.py  py_featuremap.py  py_identifications.py  py_msexperiment.py  py_msspectrum.py  workflows.py
openms_python/examples/: __init__.py  small.mzML
tests/: conftest.py  test_consensus_map.py  test_examples.py  test_idperformance.py  test_meta_mapping.py  test_py_consensusmap.py  test_py_featuremap.py  test_py_identifications.py  test_py_msexperiment.py  test_py_msspectrum.py  test_workflows.py
