[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openms-python"
version = "0.1.2"
description = "A Pythonic wrapper around pyOpenMS for mass spectrometry data analysis"
readme = "README.md"
authors = [
    {name = "MiniMax Agent", email = "agent@minimax.com"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["mass-spectrometry", "proteomics", "metabolomics", "openms", "bioinformatics"]
requires-python = ">=3.8"
dependencies = [
    "pyopenms>=3.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/openms/openms-python"
Documentation = "https://openms-python.readthedocs.io"
Repository = "https://github.com/openms/openms-python"
"Bug Tracker" = "https://github.com/openms/openms-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openms_python*"]

[tool.setuptools.package-data]
"openms_python" = ["examples/*.mzML"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=openms_python --cov-report=term-missing"
